# milang

./: .gitignore  BUG-where-clause-record-params-unbound.md  LICENSE  Makefile  README.md  showcase.mi  showcase_core  showcase_core.c
.github/: IMPLEMENTATION_NOTES.md  ROADMAP.md  copilot-instructions.md
.github/workflows/: build.yml
core/: Dockerfile.base  Dockerfile.builder  Makefile.static  WASM_NOTES.md  milang-core.cabal
core/src/: Main.hs  WebMain.hs
core/src/Core/: CHeader.hs  Codegen.hs  IR.hs  Lexer.hs  NativeCodegen.hs  Optimize.hs  Parser.hs  Prelude.hs  Reduce.hs  Remote.hs  Syntax.hs  WebFFI.hs  WebREPL.hs
docs/: book.toml  mdbook-milang.py  repl.html
docs/assets/: repl-js-worker.mjs  repl-runtime.js  repl-wasm-worker.mjs  repl-worker.js
docs/assets/wasm/: milang-wasm.wasm
docs/src/: SUMMARY.md  introduction.md
docs/src/guides/: common-pitfalls.md  compiler-modes.md  hello-world.md  how-it-works.md  installation.md  repl.md  tooling.md
docs/src/language/: cheatsheet.md  docs.md  ffi.md  functions.md  imports.md  io.md  lists.md  metaprogramming.md  open-functions.md  operators.md  parse-decls.md  partial-eval.md  pattern-matching.md  records.md  scopes.md  security.md  stdlib.md  thunks.md  traits.md  types.md  user-operators.md  values.md
hs/: milang.cabal
hs/src/: Main.hs
hs/src/Milang/: CHeader.hs  Codegen.hs  Import.hs  Lexer.hs  Parser.hs  Prelude.hs  Reduce.hs  Remote.hs  Syntax.hs  TraitCheck.hs  TypeCheck.hs
html/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-a96b4c13.js  searchindex-f797b170.js  toc-00f3f711.js  toc-2d887c1e.js  toc.html
html/guides/: common-pitfalls.html  compiler-modes.html  hello-world.html  how-it-works.html  installation.html  repl.html  tooling.html
html/language/: cheatsheet.html  docs.html  ffi.html  functions.html  imports.html  io.html  lists.html  metaprogramming.html  open-functions.html  operators.html  parse-decls.html  partial-eval.html  pattern-matching.html  records.html  scopes.html  security.html  stdlib.html  thunks.html  traits.html  types.html  user-operators.html  values.html
pandoc/pdf/src/: part-1-Getting-Started.md  part-2-Language-Reference.md  part-3-Annotation-Domains.md  part-4-Advanced-Topics.md  part-5-Tools.md
pandoc/pdf/src/guides/: common-pitfalls.md  compiler-modes.md  hello-world.md  tooling.md
pandoc/pdf/src/language/: cheatsheet.md  docs.md  ffi.md  functions.md  imports.md  io.md  lists.md  metaprogramming.md  open-functions.md  operators.md  partial-eval.md  pattern-matching.md  records.md  stdlib.md  thunks.md  types.md  values.md
pandoc/single/: The-Milang-Programming-Language.html
pandoc/single/src/: SUMMARY.md  introduction.md
pandoc/single/src/guides/: compiler-modes.md  hello-world.md  how-it-works.md  installation.md  repl.md
pandoc/single/src/language/: functions.md  imports.md  io.md  lists.md  open-functions.md  operators.md  parse-decls.md  records.md  scopes.md  security.md  stdlib.md  thunks.md  traits.md  types.md  user-operators.md  values.md
tests/: additive_types.mi  advanced_patterns.mi  arith.mi  basic.mi  bignum.mi  block_arg.mi  boolean_ops.mi  boosted_prelude.mi  bug_collections_segfault.mi  bug_forward_ref_codegen.mi  bug_init_builtin.mi  bug_lambda_capture.mi  bug_length_native.mi  bug_module_builtin_shadow.mi  bug_module_builtin_shadow_test.mi  bug_mutual_recursion_ffi.mi  bug_negative_literal_codegen.mi  bug_nested_builtins.mi  bug_nested_fold.mi  bug_reserved_words.mi  bug_tco_different_arity.mi  bug_tco_float_literal_closure.mi  bug_tco_float_type_confusion.mi  bug_thunk_reeval.mi  bug_variable_redefinition.mi  bug_variable_scope_leak.mi  build_module.mi  callback_ffi.mi  callback_inline.mi  cc_flags.mi  cimport.c  cimport.mi  cimport_auto.mi  cimport_custom.c  cimport_custom.mi  cimport_outparams.mi  cimport_stdio.mi  circular_import.mi  closure.mi  closure2.mi  (+147 more)
tests/known_bugs/: bug_module_builtin_shadow.mi  bug_module_builtin_shadow_test.mi  bug_shadow_module.mi
tests/lib/: bug_shadow_module.mi  callback_ffi.c  callback_ffi.h  callback_inline.c  callback_inline.h  cc_flags_test.h  double_sum.mi  enum_ffi.c  enum_ffi.h  ffi_annotate_test.c  ffi_annotate_test.h  ffi_include_test.c  ffi_include_test.h  ffi_include_types.h  ffi_opaque_test.c  ffi_opaque_test.h  float32_ffi.c  float32_ffi.h  gc_test_ffi.c  gc_test_ffi.h  geometry.mi  helpers.mi  if_module.mi  imports.mi  mini_array.h  module_a.mi  module_b.mi  mutual_rec_module.mi  mylib.c  mylib.h  mymath.mi  nullable_return.c  nullable_return.h  nullable_test.c  nullable_test.h  record_builder.mi  recursive_module.mi  sized_ffi_test.c  sized_ffi_test.h  strbuf_starts.mi  (+5 more)
