cabal-version:      3.0
name:               milang-core
version:            0.1.0.0
synopsis:           Milang compiler with unified reduction architecture
license:            BSD-3-Clause
build-type:         Simple

executable milang-core
  main-is:          Main.hs
  other-modules:    Core.Syntax
                  , Core.Lexer
                  , Core.Parser
                  , Core.Reduce
                  , Core.Codegen
                  , Core.Prelude
  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -dynamic
  build-depends:     base >= 4.17 && < 5
                   , megaparsec >= 9.0
                   , parser-combinators >= 1.3
                   , text >= 2.0
                   , containers >= 0.6
                   , process >= 1.6
                   , directory >= 1.3
                   , filepath >= 1.4
                   , temporary >= 1.3
