cabal-version:      3.0
name:               milang-core
version:            0.1.0.0
synopsis:           Milang compiler with unified reduction architecture
license:            BSD-3-Clause
build-type:         Simple

executable milang-core
  main-is:          Main.hs
  other-modules:    Core.Syntax
                  , Core.Lexer
                  , Core.Parser
                  , Core.Reduce
                  , Core.Codegen
                  , Core.Prelude
                  , Core.CHeader
                  , Core.Remote
                  , Core.Version
                  , Core.IR
  hs-source-dirs:   src
  default-language:  Haskell2010
  build-depends:     base >= 4.17 && < 5
                   , megaparsec >= 9.0
                   , parser-combinators >= 1.3
                   , text >= 2.0
                   , bytestring >= 0.11
                   , cryptohash-sha256 >= 0.11
                   , base16-bytestring >= 1.0
                   , containers >= 0.6
                   , process >= 1.6
                   , directory >= 1.3
                   , filepath >= 1.4
                   , temporary >= 1.3
                   , aeson >= 2.0
                   , aeson-pretty >= 0.8
                   , optparse-applicative >= 0.17
