cabal-version:      3.0
name:               milang
version:            0.1.0.0
synopsis:           Milang compiler with partial evaluation
license:            MIT
build-type:         Simple

executable milang
  main-is:          Main.hs
  other-modules:    Milang.Syntax
                  , Milang.Lexer
                  , Milang.Parser
                  , Milang.Import
                  , Milang.CHeader
                  , Milang.Reduce
                  , Milang.Codegen
  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -dynamic
  build-depends:     base >= 4.17 && < 5
                   , megaparsec >= 9.0
                   , parser-combinators >= 1.3
                   , text >= 2.0
                   , containers >= 0.6
                   , process >= 1.6
                   , directory >= 1.3
                   , filepath >= 1.4
                   , temporary >= 1.3
